--- a/app/client/index.scss
+++ b/app/client/index.scss
@@ -15,8 +15,7 @@ body, html, #app, #root {
   margin: 0;
   font-family: 'Roboto', Helvetica, sans-serif;
   overflow-x: hidden;
-  height: 100%;
-  min-height: min-content;
+  min-height: 100%;
 }
 
 .mce-notification {
